--- a/css/main.css
+++ b/css/main.css
@@ -817,7 +817,17 @@ form {
         display: none;
         font-size: 1rem;
     }
+
+    .nav-list{
+        display: none;
+        visibility: hidden;
+    }
     
+    .nav-table{
+        display: block;
+        visibility: visible;
+    }
+
     
 }
 
@@ -829,6 +839,11 @@ form {
 
     .informacion__seccion>div {
         width: 50%;
+    }
+
+    .nav-table  {
+        display: none;
+        visibility: hidden;
     }
 
 }
