--- a/css/main.css
+++ b/css/main.css
@@ -818,11 +818,12 @@ form {
         font-size: 1rem;
     }
 
-    .nav-list{
+    .nav-list,#nombre__usuario{
         display: none;
         visibility: hidden;
     }
     
+
     .nav-table{
         display: block;
         visibility: visible;
